# ares

./: .gitignore  README.md  pyproject.toml
ares/: service.py
ares/db/characters/: character_init.parquet
ares/engine/: operations.py  probability.py  traits.py
ares/models/: characteristic.py
ares/models/adv_character/: attribute.py  character.py  skills.py
ares/models/character/: character.py
ares/models/events/: chat_message.py
notebooks/: presentation.ipynb
tests/: test_character.py  test_operations.py
